force-app/main/default/objects/CPQ2_Core_List_Price_Request__c/CPQ2_Core_List_Price_Request__c.object-meta.xml
<CustomObject>
    <label>Core List Price Request</label>
    <nameField>
        <displayFormat>CPR-{000000000}</displayFormat>
        <label>Core List Price Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Core List Price Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>