force-app/main/default/objects/CPQ2_Core_List_Price_Request__c/fields/CPQ2_Approved_Core_List_Price__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Approved_Core_List_Price__c</fullName>
    <label>Approved Core List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>