force-app/main/default/objects/CPQ2_Core_List_Price_Request__c/fields/CPQ2_Is_VMI__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Is_VMI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is VMI?</label>
    <type>Checkbox</type>
</CustomField>