force-app/main/default/objects/CPQ2_Core_List_Price_Request__c/fields/CPQ2_isProcessed__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_isProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Processed</label>
    <type>Checkbox</type>
</CustomField>