force-app/main/default/objects/CPQ2_Core_List_Price_Request__c/fields/CPQ2_Line_Margin_Contract_Price__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Line_Margin_Contract_Price__c</fullName>
    <description>Calculated Margin for the line item</description>
    <label>Line Margin - Contract Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>