force-app/main/default/objects/CPQ2_Core_List_Price_Request__c/fields/CPQ2_Pricebook_Entry_Id__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Pricebook_Entry_Id__c</fullName>
    <label>Pricebook Entry Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>