force-app/main/default/objects/CPQ2_Core_List_Price_Request__c/fields/CPQ2_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Product_Code__c</fullName>
    <formula>CPQ2_Product__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>