force-app/main/default/objects/CPQ2_Core_List_Price_Request__c/fields/CPQ2_Threshold_Triggered__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Threshold_Triggered__c</fullName>
    <label>Threshold Triggered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>