force-app/main/default/objects/CPQ2_Core_List_Price_Request__c/fields/CPQ2_VMI_Request__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_VMI_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VMI Request</label>
    <referenceTo>CPQ2_VMI_Request__c</referenceTo>
    <relationshipLabel>Core List Price Requests</relationshipLabel>
    <relationshipName>Core_List_Price_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>